--- a/_lessons/106.html
+++ b/_lessons/106.html
@@ -1,132 +1,154 @@
 ---
 layout: presentation
-title: Docs
-lesson: 107
+title: Sources
+lesson: 106
 estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
 ---
 
 class: title, center, middle
-# Docs
+# Sources
 
 ---
 
-# Why is documentation important?
+# If you've ever had this happen...
 
-_Low quality research manifests as an environment of knowledge cacophony,
-where teams only read and trust research that they themselves created._
-- Chetan Sharma and Jan Overgoor, [Scaling Knowledge at Airbnb](
-https://medium.com/airbnb-engineering/scaling-knowledge-at-airbnb-875d73eff091)
-
-&nbsp;
-
-_If you don't know, now you know._
-- Notorious B.I.G., "Juicy"
-
----
-
-class: subtitle, middle, center
-## _How is knowledge documented and maintained at your company?_
-
----
-
-# Our favorite metaphor
-
-* Analytics engineers are librarians.
-* Documentation is the card catalog.
-* The goal is to empower analyst-researchers.
+- I'm switching my email marketing platform. I want to know which final models depend on that source data.
 --
 
-* _The libarian and the card catalog do not replace each other—they reinforce and enable each other!_
+- I'm switching the tool that extracts and loads _from_ my email 
+marketing platform. The table names used to have underscores, now they don't!
+--
 
-### Analytics is the organization of an organization's information.
+- I'm switching from Redshift to Snowflake. All of my source data will be
+in a different database and schema.
+--
+
+- Nothing in this world is perfect. My data loading tools experience occasional
+hiccups that result in delayed or duplicated data.
+--
+
+- (!!) I want to stage & query an external table that points to files in S3.
 
 ---
 
-class: subtitle, middle, center
+# Sources may be right for you!
 
-## dbt docs
+- Easily declare and update the location of raw tables
+    - `database` + `schema` for each source
+    - `name`/`identifier` for each table
+--
+- Test schema integrity of raw tables
+    - Built-in: `unique`, not_null`, `accepted_values`, `relationships`
+    - Custom: whatever you want!
+--
+- Test the freshness of loaded data, based on thresholds you define
+--
 
-???
-not docs.getdbt.com, though those are also great
+- (!!) Declare `external` properties ([read more](https://github.com/fishtown-analytics/dbt-external-tables))
 
 ---
 
-### Example (from the [MRR playbook](https://github.com/fishtown-analytics/mrr-playbook))
+# YML
+
+I define my sources in `stripe_source.yml`:
+```yml
+version: 2
+
+sources:
+  - name: stripe
+    tables:
+      - name: payment
+```
+
+---
+
+# Feeling fresh?
+
+Optionally, specify a `loaded_at_field` and `freshness`:
+```yml
+version: 2
+
+sources:
+  - name: stripe
+    loaded_at_field: _batched_at
+    loader: airflow     # this is just for documentation
+    
+    freshness:
+      warn_after: {count: 12, period: hour}
+      error_after: {count: 24, period: hour}
+    
+    tables:
+      - name: payment
+```
+
+---
+
+# SQL
+
+And then I create a staging model, `stg_stripe_payment.sql`:
 
 {% raw %}
-```yml
-models:
-  - name: mrr
-    description: "{{ doc('mrr') }}"
+```sql
+with source as (
 
-    columns:
-      - name: id
-        tests:
-          - unique
-          - not_null
+    select * from {{source('stripe', 'payment')}}
 
-      - name: mrr
-        description: Monthly recurring revenue in dollars.
-        tests:
-          - not_null
+),
 
-      - name: change_category
-        description: "{{ doc('change_category') }}"
+renamed as (
+
+...
 ```
-
----
-
-### `docs` blocks
-
-.dense-text[
-```md
-{% docs mrr %}
-This model represents one record per month, per account (months have been filled
-in to include any periods of inactivity).
-
-This model classifies each month as one of: `new`, `reactivation`, `upgrade`,
-`downgrade`, or `churn`.
-
-{% enddocs %}
-
-{% docs change_category %}
-
-| Category       | Definition                                                                                              |
-|----------------|---------------------------------------------------------------------------------------------------------|
-| new            | The customer is a new customer that has not had a previous subscription                                 |
-| churn          | Last month the customer paid for a subscription, but this month is not. A customer can churn many times |
-| upgrade        | The customer has increased their usage and is now paying you more money per month                       |
-| downgrade      | The customer has decreased their usage and is now paying you less money per month                       |
-| reactivation   | A previously churned customer has started subscribing again                                             |
-| (null)         | No change compared to last month                                                                        |
-
-{% enddocs %}
-```
-]
 {% endraw %}
 
 ---
 
-class: center, middle
-# [Voila !](https://www.getdbt.com/mrr-playbook/#!/model/model.acme.mrr)
+# Sources are green...
+
+<img src="/lessons/img/{{page.lesson}}/dag-source.png" class="img-center">
 
 ---
 
-## dbt Cloud
-<img src="/lessons/img/{{page.lesson}}/job-config-gen-docs.png" style="width: 90%; float: left;">
+.left-column-33[
+# And green is good!
+]
+
+.right-column-66[
+```bash
+dbt source snapshot-freshness
+```
+<img src="/lessons/img/{{page.lesson}}/freshness-viz.png" style="width: 100%;" class="img-center">
+]
 
 ---
 
-# Our strong opinions!
+# In deployment
 
-Given:
-* Code is _surface area_. Testing and documentation are _coverage_.
-* Untested, undocumented code _cannot be trusted_. In some sense, it is worse
-than having no code at all.
+A common approach: Test the schema integrity of raw tables _before_
+replacing production models.
 
-Therefore:
-* Data documentation that seeks to accurately describe data transformation _must_
-be updated as part of the same workflow as the transformation logic it seeks to
-describe. If the two are separate, documentation will _always_ lag behind.
+```bash
+dbt test -m source:*            # ensure no duplicates or unexpected nulls
+dbt run                         # only runs if test above succeeds
+dbt test --exclude source:*
+dbt source snapshot-freshness   # powers freshness viz in dbt Cloud
+```
+
+Of course, many deployments are _much_ more complex.
+
+???
+More complex deployments:
+- Blue/green that renames schema/database at last step (if all tests pass) or
+leaves old objects in place (if a test fails)
+
+---
+
+name: working-session
+class: subtitle
+
+# Working session
+* Add `sources` for our two data sources: `jaffle_shop` and `stripe`.
+
+{% include options/next-presentation.html %}
