--- a/_lessons/203.html
+++ b/_lessons/203.html
@@ -1,353 +1,181 @@
 ---
 layout: presentation
-title: Jinja
-lesson: 202
+title: Packages and projects
+lesson: 203
 ---
 
 class: title, center, middle
-
-{% raw %}
-
-# `{{ Jinja }}`
-
-`{% set date = '{% endraw %}{{site.time|slice: 0, 10}}' %}{% raw %}`
+# Packages
 
 ---
-
-
-# Jinja is a templating engine
-
-And it's _pythonic_! So it works in ways you'd expect if you've ever
-written python, and even if you haven't.
-
-.left-column[
-Other templating engines:
-* Nunjucks (JavaScript, Jinja-inspired)
-* Liquid (Ruby)
-]
-
-.right-column[
-Applications that use Jinja:
-* Ansible
-* Flask
-* Airflow
-* dbt!
-]
-
-[_Read the Jinja docs_](https://jinja.palletsprojects.com/en/2.11.x/)
-
----
-
-class: subtitle, middle, center
-
-<h1 style="font-size: 300%;" class="remark-inline-code">
-{% ... %}<br>
-{{ ... }}
-</p>
-
----
-
-# Setting local variables
-
-
-```jinja
-{% set me = 3 %}
-{% set you = 'foo' %}
-```
-
----
-# Dictionaries
-
-```jinja
-{% set person = {
-    'name': 'me',
-    'number': 3
-} %}
-```
-```jinja
-{{ person.name }}
-{{ person['name'] }}
-```
---
-```
-me
-me
-```
-
-
----
-# Arrays
-
-```jinja
-{% set self = ['me', 'myself'] %}
-
-{% do self.append('i') %}
-```
-
-```jinja
-{{ i[0] }}
-{{ i | length }}
-```
---
-```
-me
-3
-```
-
----
-
-# And so on
-
-```jinja
-{% set us = [
-  {
-      'name': 'me',
-      'number': 3
-  },
-  {
-      'name': 'you',
-      'details': 'foo'
-  }
-] %}
-
-{{ us[1]['details'] }}
-```
---
-```
-foo
-```
-
----
-
-# Conditions
-
-
-```jinja
-{% set temperature = 70 %}
-
-On a day like this, I especially like
-
-{% if temperature > 60 %}
-
-    a refreshing Coca-Cola.
-
-{% else %}
-
-    a nourishing Bistrone Select soup.
-
-{% endif %}
-```
-
-
+# What are packages?
 --
 
-```
-On a day like this, I especially like a refreshing Coca-Cola.
-```
+Packages are dbt projects that you can install in your _own dbt project_
+
+They have:
+* A `dbt_project.yml` file
+* And contain macros, models etc.
 
 
+???
+Teacher notes:
+* We're starting with a very literal example (using macros), and then going to talk more broadly about packages.
+Before we hit databases, there's a nice story of "woah that's a package, which is just a dbt project? you know what else has a dbt project? (A: dbt)."
+Or, "yo why is there 138 macros in our project when we only added one".
+And from there we can talk a little bit about writing custom tests + using custom schemas + custom aliases + custom overviews. Once you get that concept down, it's so easy to understand how you can get dbt to do things you want it to do
 ---
+# Use case: Using macros from a package
 
-# Loops
-
-
-```jinja
-{% set flavors = ['chocolate','vanilla','strawberry'] %}
-
-{% for flavor in flavors %}
-	Today I want {{ flavor }} ice cream!
-{% endfor %}
-```
-
+1. Add a `packages.yml` file to your project
 
 --
-
-```
-Today I want chocolate ice cream!
-Today I want vanilla ice cream!
-Today I want strawberry ice cream!
-```
-
----
-
-# Wait: Loops???
-
-_Aren't we going to be writing SQL???_
-
---
-
-SQL is a highly performant and _very_ declarative language.
-
-We _are not_ looping across rows in the database.
-
-We _are_ using loops to avoid copy-paste when writing SQL. That compiled
-SQL is then run against the database.
-
----
-
-# Macros
-
-```jinja
-{% macro i_want(flavor, dessert = 'ice cream') %}
-	Today I want {{ flavor }} {{ dessert }}!
-{% endmacro %}
-
-{{ i_want(flavor = 'chocolate') }}
-{{ i_want('mango', 'sorbet') }}
-```
---
-```
-Today I want chocolate ice cream!
-Today I want mango sorbet!
-```
-
----
-
-class: subtitle, center, middle
-# dbtonic Jinja
-
----
-
-# refs
-
-`{{ ref('stg_stripe_payment') }}`
-
-.grey[`dev_drew.stg_stripe_payment`]
-
-**`analytics.stg_stripe_payment`**
-
-&nbsp;
-
-Use it always! This is how dbt:
-* Mananages environments
-* Infers all model dependencies (DAG)
-
----
-
-# project-level vars
-
 
 ```yml
-# dbt_project.yml
+# packages.yml
+packages:
+  - package: fishtown-analytics/snowplow
+    version: 0.7.1
+
+  - git: "https://github.com/fishtown-analytics/dbt-utils.git"
+    revision: 0.1.21
+
+```
+???
+* Discuss when to use which syntax
+---
+# Use case: Using macros from a package
+
+1. Add a `packages.yml` file to your project
+--
+
+2. Run `dbt deps` to install the package (check out the `modules` dir!)
+```shell
+$ dbt deps
+```
+???
+* Show the  modules directory
+* Note that these are .gitignored
+---
+# Use case: Using macros from a package
+
+1. Add a `packages.yml` file to your project
+2. Run `dbt deps` to install the package
+--
+
+3. Access macros from the package
+{% raw %}
+```sql
+-- models/utils/util_days.sql
+{{ dbt_utils.date_spine(
+    datepart="day",
+    start_date="to_date('01/01/2016', 'mm/dd/yyyy')",
+    end_date="current_date"
+   )
+}}
+```
+{% endraw %}
+---
+# Use case: Using macros from a package
+
+1. Add a `packages.yml` file to your project
+2. Run `dbt deps` to install the package
+3. Access macros from the package
+
+```yml
+# models/marts/core/schema.yml
+version: 2
 
 models:
-  my_dbt_project:
-	vars:
-	  flavor: chocolate    # default value
+  - name: companies
+    tests:
+      - dbt_utils.expression_is_true:
+          expression: "assets - liabilities = equity"
 ```
 
-```sql
-# flavortown.sql
-
-select '{{ var("flavor") }}' as my_favorite_flavor
-```
+???
+* Go through some of the most common macros in dbt-utils (there might be overlap with previous lesson)
+---
+# Q: What happens when you add a package with models in it?
 --
-```
-select 'chocolate' as my_favorite_flavor
-```
+
+These models get added to your DAG!
 
 ---
+background-color: #005E7A
+<img src="/lessons/img/{{page.lesson}}/snowplow-package.png" style="width: 100%;">
 
-# Hot tip
 
-You can override global vars with a CLI flag:
+---
+# Use cases for packages:
+## Macros:
+* Versatile macros, especially for “How to Write this in SQL” problems ([dbt-utils](https://hub.getdbt.com/fishtown-analytics/dbt_utils/latest/))
+* Ad hoc queries/snippets you find yourself writing over and over ([audit_helper](https://hub.getdbt.com/fishtown-analytics/audit_helper/latest/), [codegen](https://hub.getdbt.com/fishtown-analytics/codegen/latest/))
 
-```sql
-# flavortown.sql
-select '{{ var("flavor") }}' as my_favorite_flavor
-```
+## Models:
+* Common staging models for one data source ([facebook](https://hub.getdbt.com/fishtown-analytics/facebook_ads/latest/))
+* Follow industry standards for boilerplate-yet-complex modeling ([snowplow](https://hub.getdbt.com/fishtown-analytics/snowplow/latest/), [segment](https://hub.getdbt.com/fishtown-analytics/segment/latest/))
 
-```bash
-dbt run --vars '{"flavor": "vanilla"}'
-```
+
+---
+class: subtitle
+# Working session
+## Using macros from a package:
+* Add [dbt-utils](https://hub.getdbt.com/fishtown-analytics/dbt_utils/latest/) to your dbt project
+* Use a macro from dbt-utils (e.g. `date_spine` to create a table of all days)
+
+
+---
+## Hold up, what about all those other macros?
+Even before we added `dbt_utils`, we had a ton of macros whenever we ran dbt.
+.center[
+<img src="/lessons/img/{{page.lesson}}/127-macros.png" style="width: 50%;">
+]
+???
+This slide is truly for curious minds.
 --
-```
-select 'vanilla' as my_favorite_flavor
-```
+.dense-text[
+dbt is itself [a package](https://github.com/fishtown-analytics/dbt/tree/dev/barbara-gittings/core/dbt/include/global_project)!
+* a.k.a "the dbt global project"
+* Tests are macros prefixed with `test_`
+* Materializations use macros
+]
+???
+Hint: we might need this information later today!
+
+---
+background-color: white
+<img src="/lessons/img/{{page.lesson}}/dbt-global-project.jpeg" style="width: 100%;">
+
+---
+# Everything's a project!
+So:
+* You have your own dbt project
+* You also have the dbt global project
+* You can also install additional projects as packages
 
 ---
 
-# Logging
-
-```jinja
-{% macro grant_on(user, object, privilege) %}
-
-	grant {{privilege}} on {{object}} to {{user}}
-
-    {% set message %}
-        User {{user}} is ready to rock & roll with {{privilege}} on {{object}}
-    {% endset %}
-
-	{% do log(message, info = true) %}
-
-{% endmacro %}
-```
-
-```sql
-{{ grant_on('fishtown_drew', 'analytics.stg_stripe_payment', 'select') }}
-```
+## What happens if you create a macro with the same name as a global macro?
 --
-```
-User fishtown_drew is ready to rock & roll with select on
-analytics.stg_stripe_payment
-```
+
+
+If you have a macro in _your project_ with the same name as macro in the _dbt global project_, your version is preferred! This means you can:
+* Change the way dbt generates schema + and relation names
+* Change the way tests are implemented
+* Even change materializations!
+
+.caption[
+[Learn more](https://discourse.getdbt.com/t/did-you-know-dbt-ships-with-its-own-project/764)
+]
 ---
+class: subtitle
+# Working session
+## Using macros from a package:
+* Add [dbt-utils](https://hub.getdbt.com/fishtown-analytics/dbt_utils/latest/) to your dbt project
+* Use a macro from dbt-utils (e.g. `date_spine` to create a table of all days)
 
-# Logging
-
-Especially useful when you're working on:
-- Complicated macros
-- Macros that call other macros
-- Macros that run introspective queries against the database*
-- Macros that are run as operations*
-- Custom materializations*
-
-Topics for later (or another time)!
-
----
-
-# Whitespace control
-
-Add dashes to remove whitespace from compiled output:
-- `{{ this }}` &rarr; `{{- this -}}`
-- `{% this %}` &rarr; `{%- this -%}`
-
-```jinja
-yeah
-{% this will be an empty line in the compiled code %}
-good.
-{%- but this will not! -%}
-ok.
-```
---
-```
-yeah
-
-good.ok.
-```
-
----
-
-# Comments
-
-```sql
--- this is a SQL comment
-/* as is this */
-```
-```jinja
-{# whereas this is a Jinja comment #}
-```
-
-- Only SQL comments show up in your compiled code
-    - Jinja comments for dbt things
-    - SQL comments for modeling/business logic
-- Be careful about having the two in close proximity!
-
-{% endraw %}
-
----
-
-class: subtitle, middle, center
-# Let's get templating!
+## Overriding the dbt global project
+* Change the way that dbt generates schema names ([docs](https://docs.getdbt.com/docs/using-custom-schemas#section-changing-the-way-dbt-generates-a-schema-name)).
 
 {% include options/next-presentation.html %}
