--- a/lessons.html
+++ b/lessons.html
@@ -7,7 +7,7 @@ permalink: /lessons/
 <meta name="robots" content="noindex">
 
 <div class="bg-navy-darker">
-	<div class="section-md text-white text-navy-lightest">
+	<div class="section-lg text-white text-navy-lightest">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8">
@@ -18,80 +18,33 @@ permalink: /lessons/
 			</div>
 		</div>
 	</div>
+	<div class="mask mask-ne text-white"></div>
 </div>
 
 <div class="bg-white">
 	<div class="mask mask-ne text-white"></div>
 	<div class="mask mask-sw text-white"></div>
 	<div class="section">
-		<div class="text-contain" style="max-width: 900px">
+		<div class="text-contain">
 			<div class="row">
 				<div class="col-lg-12 col-bottomless">
                 </div>
             </div>
 			<div class="row">
+                {% for lesson in site.lessons %}
+                {% if lesson.lesson == 101 or lesson.lesson == 201 %}
                 <div class="col-md-6">
-                    <h4> Day One: Foundations </h4>
-                    <ul class='list-icons text-med text-heading text-left'>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/101">101</a> Who is an analytics engineer?
-                        </li>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/102">102</a> The analytics engineering viewpoint
-                        </li>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/103">103</a> dbt Fundamentals
-                        </li>
-												<li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            Working session: Building models
-                        </li>
-                        <li>
-                            <hr style="margin: 15px" />
-                        </li>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/104">104</a> Data Warehouse Design
-                        </li>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/105">105</a> Data Sources
-                        </li>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/106">106</a> Documenting dbt projects
-                        </li>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/107">107</a> The CONA data stack
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-6">
-                    <h4> Day Two: Applications </h4>
-                    <ul class='list-icons text-med text-heading text-left'>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/201">201</a> Version Control &amp; CI/CD
-                        </li>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/202">202</a> Testing data
-                        </li>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/203">203</a> Jinja &amp; macros
-                        </li>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/204">204</a> Best practices
-                        </li>
-                        <li>
-                            <hr style="margin: 15px" />
-                        </li>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/205">205</a> Packages and projects
-                        </li>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/206">206</a> Materializations and incremental models
-                        </li>
-                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/207">207</a> Techniques of the trade
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+                    {% if lesson.lesson == 101 %} <h4> Day One: Foundations </h4> {% endif %}
+                    {% if lesson.lesson == 201 %} <h4> Day Two: Applications </h4> {% endif %}
+                        <ul class='list-icons text-med text-heading text-left'>
+                {% endif %}
+                            <li><span class='arrow-right text-blue text-medium list-icon'></span><a href="{{lesson.url}}">{{lesson.lesson}}</a> {{lesson.title}}</li>
+                {% if lesson.lesson == 109 or lesson.lesson == 209 %}
+                        </ul>
+                    </div>
+                {% endif %}
+                {% endfor %}
+			</div>
+		</div>
     </div>
 </div>
