--- a/cona.html
+++ b/cona.html
@@ -34,13 +34,13 @@ permalink: /cona/
                     <h4> Day One: Foundations </h4>
                     <ul class='list-icons text-med text-heading text-left'>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/101">101</a> Who is an analytics engineer?
+                            <a target="_blank" href="/cona/101">101</a> Who is an analytics engineer?
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/102">102</a> The analytics engineering viewpoint
+                            <a target="_blank" href="/cona/102">102</a> The analytics engineering viewpoint
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/103">103</a> dbt Fundamentals
+                            <a target="_blank" href="/cona/103">103</a> dbt Fundamentals
                         </li>
 												<li><span class='arrow-right text-blue text-medium list-icon'></span>
                             Working session: Building models
@@ -49,16 +49,16 @@ permalink: /cona/
                             <hr style="margin: 15px" />
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/104">104</a> Data Warehouse Design
+                            <a target="_blank" href="/cona/104">104</a> Data Warehouse Design
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/105">105</a> Data Sources
+                            <a target="_blank" href="/cona/105">105</a> Data Sources
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/106">106</a> Documenting dbt projects
+                            <a target="_blank" href="/cona/106">106</a> Documenting dbt projects
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/107">107</a> The CONA data stack
+                            <a target="_blank" href="/cona/107">107</a> The CONA data stack
                         </li>
                     </ul>
                 </div>
@@ -66,28 +66,28 @@ permalink: /cona/
                     <h4> Day Two: Applications </h4>
                     <ul class='list-icons text-med text-heading text-left'>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/201">201</a> Version Control &amp; CI/CD
+                            <a target="_blank" href="/cona/201">201</a> Version Control &amp; CI/CD
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/202">202</a> Testing data
+                            <a target="_blank" href="/cona/202">202</a> Testing data
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/203">203</a> Jinja &amp; macros
+                            <a target="_blank" href="/cona/203">203</a> Jinja &amp; macros
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/204">204</a> Best practices
+                            <a target="_blank" href="/cona/204">204</a> Best practices
                         </li>
                         <li>
                             <hr style="margin: 15px" />
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/205">205</a> Packages and projects
+                            <a target="_blank" href="/cona/205">205</a> Packages and projects
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/206">206</a> Materializations and incremental models
+                            <a target="_blank" href="/cona/206">206</a> Materializations and incremental models
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/207">207</a> Techniques of the trade
+                            <a target="_blank" href="/cona/207">207</a> Techniques of the trade
                         </li>
                     </ul>
                 </div>
