--- a/_cona/107.html
+++ b/_cona/107.html
@@ -11,3 +11,9 @@ class: title, center, middle
 # The CONA data stack
 
 ---
+
+## What does your stack look like?
+* How is the data loaded into Snowflake?
+* How is the data queried?
+* How do you know if data is up-to-date?
+* Who gets notified when processes fail?
