--- a/cona.html
+++ b/cona.html
@@ -42,7 +42,7 @@ permalink: /cona/
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
                             <a target="_blank" href="/cona/103">103</a> dbt Fundamentals
                         </li>
-												<li><span class='arrow-right text-blue text-medium list-icon'></span>
+                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
                             Working session: Building models
                         </li>
                         <li>
@@ -66,25 +66,25 @@ permalink: /cona/
                     <h4> Day Two: Applications </h4>
                     <ul class='list-icons text-med text-heading text-left'>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/cona/201">201</a> Version Control &amp; CI/CD
+                            Working session: End-to-end modelling
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/cona/202">202</a> Testing data
+                            <a target="_blank" href="/cona/203">201</a> Jinja &amp; macros
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/cona/203">203</a> Jinja &amp; macros
+                            <a target="_blank" href="/cona/206">202</a> Materializations and incremental models
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/cona/204">204</a> Best practices
-                        </li>
-                        <li>
-                            <hr style="margin: 15px" />
+                            <a target="_blank" href="/cona/204">203</a> Best practices
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/cona/205">205</a> Packages and projects
+                            <a target="_blank" href="/cona/202">204</a> Testing data
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/cona/206">206</a> Materializations and incremental models
+                            <a target="_blank" href="/cona/201">205</a> Version Control &amp; CI/CD
+                        </li>
+                        <li><span class='arrow-right text-blue text-medium list-icon'></span>
+                            <a target="_blank" href="/cona/205">206</a> Packages and projects
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
                             <a target="_blank" href="/cona/207">207</a> Techniques of the trade
