--- a/cona.html
+++ b/cona.html
@@ -66,7 +66,8 @@ permalink: /cona/
                     <h4> Day Two: Applications </h4>
                     <ul class='list-icons text-med text-heading text-left'>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            Working session: End-to-end modelling
+                            Working session (<a target="_blank" href="https://tutorial.getdbt.com/tutorial/build-your-first-models">Tutorial</a>,
+                                <a target="_blank" href="https://github.com/fishtown-analytics/jaffle_shop">Source Code</a>)
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
                             <a target="_blank" href="/cona/203">201</a> Jinja &amp; macros
