Drew's title bar is nicer

--- a/lessons.html
+++ b/lessons.html
@@ -7,7 +7,7 @@ permalink: /lessons/
 <meta name="robots" content="noindex">
 
 <div class="bg-navy-darker">
-	<div class="section-lg text-white text-navy-lightest">
+	<div class="section-md text-white text-navy-lightest">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8">
