--- a/_lessons/intro.html
+++ b/_lessons/intro.html
@@ -4,7 +4,7 @@ title: Introduction
 lesson: 000
 ---
 class: title, center, middle
-# Bienvenue à dbt apprendre Montréal
+# Bienvenue à dbt Learn Montréal
 
 ## Wifi:
 ## Password:
