Add docs for working sessions

--- a/_lessons/105.html
+++ b/_lessons/105.html
@@ -227,4 +227,8 @@ class: subtitle
 # Working session
 * Ensure that your `orders` model has tests on it (and that they pass)
 
+.caption[
+  [Related dbt documentation](https://docs.getdbt.com/docs/testing#section-schema-tests)
+]
+
 {% include options/next-presentation.html %}
