--- a/_lessons/201.html
+++ b/_lessons/201.html
@@ -180,11 +180,10 @@ PR templates help you write better PRs (and are great tools for reviewers!)
 ---
 class: subtitle
 # Working session
-* Implement our recommended configurations for Snowflake
+* Implement our [recommended configurations](/lessons/201#5) for Snowflake
 * Remove helper code from `dbt_project.yml`
 * Improve your README
-* Add a PR template (optional)
-
+* Add a PR template (name it `.github/pull_request_template.md`)
 
 {% include options/next-presentation.html %}
 
