--- a/_lessons/106.html
+++ b/_lessons/106.html
@@ -17,7 +17,7 @@ class: title, center, middle
 - I'm switching my email marketing platform. I want to know which final models depend on that source data.
 --
 
-- I'm switching the tool that extracts and loads _from_ my email 
+- I'm switching the tool that extracts and loads _from_ my email
 marketing platform. The table names used to have underscores, now they don't!
 --
 
@@ -74,11 +74,11 @@ sources:
   - name: stripe
     loaded_at_field: _batched_at
     loader: airflow     # this is just for documentation
-    
+
     freshness:
       warn_after: {count: 12, period: hour}
       error_after: {count: 24, period: hour}
-    
+
     tables:
       - name: payment
 ```
@@ -150,5 +150,8 @@ class: subtitle
 
 # Working session
 * Add `sources` for our two data sources: `jaffle_shop` and `stripe`.
+.caption[
+  [Related dbt documentation](https://docs.getdbt.com/docs/using-sources)
+]
 
 {% include options/next-presentation.html %}
