--- a/_lessons/203.html
+++ b/_lessons/203.html
@@ -172,10 +172,10 @@ If you have a macro in _your project_ with the same name as macro in the _dbt gl
 class: subtitle
 # Working session
 ## Using macros from a package:
-* Add [dbt-utils](https://hub.getdbt.com/fishtown-analytics/dbt_utils/latest/) to your dbt project
-* Use a macro from dbt-utils (e.g. `date_spine` to create a table of all days)
+* Add [dbt-utils](https://hub.getdbt.com/fishtown-analytics/dbt_utils/latest/) to your dbt project (installation instructions are on the hub site)
+* Create a new model that uses the `date_spine` macro to create a table of all days (check the [usage docs](https://github.com/fishtown-analytics/dbt-utils#date_spine-source))
 
 ## Overriding the dbt global project
-* Change the way that dbt generates schema names ([docs](https://docs.getdbt.com/docs/using-custom-schemas#section-changing-the-way-dbt-generates-a-schema-name)).
+* Change the way that dbt generates schema names ([related dbt documentation](https://docs.getdbt.com/docs/using-custom-schemas#section-changing-the-way-dbt-generates-a-schema-name)).
 
 {% include options/next-presentation.html %}
