Update wifi intro

--- a/_lessons/intro.html
+++ b/_lessons/intro.html
@@ -6,8 +6,8 @@ lesson: 000
 class: title, center, middle
 # Bienvenue à dbt Learn Montréal
 
-## Wifi:
-## Password:
+## Wifi: breather
+## Password: peaceandquiet
 
 ---
 
