Update working sessions

--- a/_lessons/107.html
+++ b/_lessons/107.html
@@ -149,6 +149,7 @@ class: subtitle
     * a source
     * a column
 * Use a docs block for one of your descriptions
+* [dbt CLI users only] Generate the documentation website
 
 .caption[
   [Related dbt documentation](https://docs.getdbt.com/docs/documentation)
