Fix bit.ly link + color

--- a/_lessons/outro.html
+++ b/_lessons/outro.html
@@ -25,7 +25,7 @@ class: middle
 class: title, center, middle
 
 # Feedback 🙏
-[bit.ly/dbt-learn-survey](bit.ly/dbt-learn-survey)
+[bit.ly/dbt-learn-survey](//bit.ly/dbt-learn-survey)
 
 
 ---
