--- a/_lessons/102.html
+++ b/_lessons/102.html
@@ -18,6 +18,7 @@ class: subtitle, center, middle
 - Version control helps manage changes to your code:
     - You can see history, along with context
     - Your changes have a review process for approval + collaboration
+    - Your team can work on projects at the same time
 - Most teams use:
     - git for version control
     - GitHub to host their repo
