--- a/_lessons/102.html
+++ b/_lessons/102.html
@@ -67,6 +67,7 @@ class: subtitle, center, middle
 ## What does QA look like for analytics engineers?
 - Run automated tests on source data and on transformed data to ensure that SQL works as intended
 - Ensure source data is up to date
+- Ensure that other systems won't break from any changes you make
 ---
 
 class: subtitle, center, middle
